# azero-iot-sdk-embedded-C

./: CMakeLists.txt  README.md  changelog.md  run.sh
include/: azero_iot_sdk_api.h
src/: main.c
toolchain/: aarch64-gnu-toolchain.cmake  arm-linux-gnueabihf-toolchain.cmake  linux64-toolchain.cmake
